syntax = "proto3";
package module;
option go_package = "./module-go;module";

message MessageRequest {
  string ID = 1;
  string From = 2;
  string To = 3;
  bytes Payload = 4;
  string EdgeID = 5;
  map<string, string> Metadata = 6;
}

message MessageResponse {
  bytes Data = 1;
  bool HasError = 3;
  string Error = 4;
}
