syntax = "proto3";
package server;
option go_package = "./module-go;module";
import "node.proto";

message GraphChangeServer {
  string ID = 1;
}
message GraphChangeModule {
  string Name = 1;
  string Version = 2;
  string VersionID = 3;
}

message GraphChange {
  repeated GraphElement Elements = 1;
  GraphChangeOp Op = 2;
  GraphChangeServer Server = 3;
  GraphChangeModule Module = 4;
}

// any element of an element of the graph (using for storage)
message GraphElement {
  string ID = 1;
  //string FlowID = 2;
  Node Node = 3;
  Edge Edge = 4;
  int64 Revision = 5;
}
