syntax = "proto3";
package server;
option go_package = "./module-go;module";
import "mapport.proto";
import "port-config.proto";
import "graph.proto";
import "google/protobuf/struct.proto";

message ConfigureInstanceRequest {
  string FlowID = 1;
  string ComponentID = 2;
  //string InstanceName = 3;
  string InstanceID = 4;  // list of port mapping with nats subjects
  repeated MapPort Destinations = 6;
  int64 Revision = 7;
  //string InstanceLabel = 8;
  repeated PortConfig PortConfigs = 9;
  bool Run = 10;
  google.protobuf.Struct Data = 11;
}

message ConfigureInstanceResponse {
  bool IsRunning = 2;
  bool HasError = 3;
  string Error = 4;
  repeated GraphChange Changes = 5;
}
